<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDoneButton"
            android:text="@string/done_button" />

        <Button
            android:id="@+id/set_consumer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onConsumerButton"
            android:text="@string/provider_button" />

        <TextView
            android:id="@+id/ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address" />

        <TextView
            android:id="@+id/conn_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conn_state" />

        <TextView
            android:id="@+id/action_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_state" />

        <TextView
            android:id="@+id/discovery_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover_state" />

        <TextView
            android:id="@+id/group_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_owner" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onScanButton"
                android:text="@string/scan_button" />

            <Button
                android:id="@+id/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onConnectButton"
                android:text="@string/connect_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStopButton"
                android:text="@string/stop" />

            <Button
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRemoveButton"
                android:text="@string/remove_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/device_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devices" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/discover_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDiscoverButton"
                android:text="@string/discover_button" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRegisterButton"
                android:text="@string/register_button" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClearButton"
                android:text="@string/clear_button" />
        </LinearLayout>

        <Button
            android:id="@+id/cache_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckCacheButton"
            android:text="@string/cache_button" />

        <TextView
            android:id="@+id/service_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/stop_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStopServiceButton"
                android:text="@string/stop_service" />

            <Button
                android:id="@+id/start_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStartServiceButton"
                android:text="@string/start_service" />
        </LinearLayout>

        <Button
            android:id="@+id/toggle_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onWifiToggle"
            android:text="@string/wifi_enabled" />
    </LinearLayout>

</ScrollView>